syntax = "proto3";

package ci.proto.storage;

option java_package = "ru.yandex.ci.storage.core";

import "ci/proto/storage/task_messages.proto";
import "ci/proto/storage/common.proto";

message MainStreamMessage {
    oneof messages {
        TaskMessage task_message = 1;
    }

    MessageMeta meta = 10;
}
