syntax = "proto3";

package ci.proto.storage;

option java_package = "ru.yandex.ci.storage.core";

import "ci/proto/storage/actions.proto";
import "ci/proto/storage/check_task.proto";
import "ci/proto/storage/common.proto";

message AutocheckTestId {
    uint64 suite_hid = 1;
    string toolchain = 2;
    uint64 hid = 3;
}

message Owners {
    repeated string logins = 1;
    repeated string groups = 2;
}

message Links {
    message Link {
        repeated string link = 1;
    }
    map<string, Link> link = 1;
}

message TestOutput {
    string hash = 1;
    string url = 2;
    int64 size = 3;
}

message AutocheckTestResult {
    AutocheckTestId id = 1;

    uint64 chunk_hid = 2;

    ResultType result_type = 3;
    TestStatus test_status = 4;

    string uid = 5;

    string path = 6;
    string name = 7;
    string subtest_name = 8;
    string requirements = 9;

    repeated string tags = 10;

    bytes snippet = 11;

    Owners owners = 12;
    Links links = 13;

    map<string, double> metrics = 14;
    map<string, TestOutput> test_outputs = 15;

    bool launchable = 20; // Make sense only for tests (Large tests) - could be launched?

    // deprecated
    string old_id = 100;  // deprecated id, use hid
    string old_suite_id = 101;  // deprecated id, use suite_hid
}

message AutocheckTestResults {
    repeated AutocheckTestResult results = 1;
}

message TaskMessage {
    FullTaskId full_task_id = 1;
    int32 partition = 2;

    oneof messages {
        Finished finished = 11;
        TestTypeFinished test_type_finished = 12;
        TestTypeSizeFinished test_type_size_finished = 13;
        TraceStage trace_stage = 14;
        Pessimize pessimize = 19;
        AutocheckFatalError autocheck_fatal_error = 20;
        AutocheckTestResults autocheck_test_results = 21;
        Metric metric = 22;
    }
}
